<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_description">Email:</string>
    <string name="password_description">Password:</string>
    <string name="new_account_button">Create Account</string>
    <string name="existing_account_label">Already have an account?</string>
    <string name="sign_in_button">Sign In</string>
    <string name="welcome_header">Welcome to The Shoe Store</string>
    <string name="welcome_body_test_scrolling">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet nibh quis neque lobortis varius at quis elit. Donec aliquet auctor egestas. Ut ac imperdiet leo. Sed a felis quis sapien ultricies sodales sit amet nec est. Curabitur metus ipsum, dignissim sodales ligula non, mollis accumsan nunc. Integer ac tortor semper, feugiat metus vitae, ullamcorper orci. Pellentesque euismod lacus nec luctus viverra. Etiam eleifend mauris in iaculis efficitur. Quisque volutpat tristique nibh quis varius. Mauris convallis magna eget quam placerat iaculis. Donec vel dolor varius, semper leo eget, ultricies massa. Duis semper ligula nisi, non fermentum tellus auctor sit amet. Maecenas sit amet dui a augue porttitor egestas ut id eros. Maecenas iaculis malesuada blandit.
    Pellentesque mauris magna, hendrerit in dolor gravida, luctus accumsan ante. Pellentesque et risus posuere, faucibus lacus sit amet, sollicitudin elit. Nunc euismod semper dui, ac dictum justo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed pulvinar, ante et imperdiet congue, magna erat congue nisl, eget scelerisque est velit sed leo. Curabitur gravida justo ac orci dignissim, a vestibulum ex fermentum. Integer vitae lorem ut elit venenatis varius. Curabitur ornare ornare neque. Nunc porta lorem et lectus gravida, sit amet auctor erat accumsan. Aenean gravida nulla sit amet massa maximus iaculis. Maecenas sed arcu eget justo vulputate posuere. Duis massa dui, accumsan sed congue ac, tristique in enim. Nulla lobortis diam urna, at finibus mi posuere ut.
    Nullam bibendum eros tempor nisi ornare accumsan. Vivamus dapibus blandit quam eu commodo. Quisque id accumsan nisi. Phasellus dictum velit urna, in scelerisque quam malesuada ut. Proin maximus facilisis mauris. Nulla a egestas purus, at rutrum lorem. Etiam nec dignissim eros. Etiam elementum interdum erat sed tincidunt. Nulla in tempor dolor, quis facilisis neque. Curabitur imperdiet, dolor vitae fringilla laoreet, velit odio maximus mi, gravida suscipit arcu arcu at erat. Pellentesque ac ipsum in leo condimentum vulputate. Duis eleifend mollis vehicula. Donec elementum rutrum posuere. Donec purus justo, pretium in justo consequat, finibus interdum eros. Mauris accumsan, massa eu vehicula fringilla, quam lacus congue magna, eget vestibulum erat leo lobortis nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
    Integer eget euismod ligula, quis porttitor turpis. Cras sapien turpis, vulputate ut tortor sit amet, porta sagittis ipsum. Vivamus molestie lorem dapibus tellus condimentum, id pretium tortor luctus. Nullam vestibulum ex tempor tincidunt condimentum. Curabitur a commodo enim, in imperdiet massa. Nunc tellus ipsum, interdum at lorem at, vestibulum rhoncus libero. Aenean condimentum sodales mattis. Nullam eu magna auctor, commodo ipsum in, faucibus nulla. Donec ac nisi vitae ligula convallis consequat. Integer bibendum vel mauris eget lacinia. Mauris egestas elit vel enim elementum dapibus. Nam suscipit, diam nec malesuada egestas, sem justo auctor nibh, eget convallis nunc tellus vitae magna. Praesent et velit eu mi accumsan blandit.
    Pellentesque consequat velit consequat ornare blandit. Vivamus euismod quam porta ornare aliquet. Ut vitae egestas elit. Fusce ut tincidunt leo, at condimentum libero. Curabitur varius nulla sed sagittis faucibus. Fusce ultrices, erat quis egestas consectetur, sapien felis euismod dolor, eget dictum lectus est ac turpis. Proin vestibulum placerat sapien, a tempus nibh venenatis id. Nunc a elementum ipsum. Suspendisse erat risus, accumsan non egestas quis, elementum vel ex. "
    </string>
    <string name="welcome_body">We are so happy to have you join our community! We are the one shop stop for everyone from the avid collector to the casual enthusiast. Check out our wide variety of shoes to match any occasion!</string>
    <string name="to_instructions_button">Let\'s Get Started</string>
    <string name="instructions_header">User Guide</string>
    <string name="view_shoes_instructions_text">View all of the shoes currently available in the shoe list screen. Here is were you can easily and quickly compare information about each shoe such as the name, manufacturer and more!</string>
    <string name="add_shoe_instructions_text">You can also easily add a new shoe to your list by clicking on the new shoe button.</string>
    <string name="start_shopping_button">Start Shopping</string>
    <string name="add_shoe_button">Add a new shoe</string>
    <string name="new_shoe_title">Add a Shoe</string>
    <string name="shoe_name_label">Name</string>
    <string name="shoe_name_hint">Name of the shoe</string>
    <string name="shoe_company_label">Company</string>
    <string name="manufacturer_name_hint">Manufacturer name</string>
    <string name="size_description">Size</string>
    <string name="shoe_size_label">Shoe Size</string>
    <string name="shoe_description_hint">A short description of the shoe</string>
    <string name="shoe_description_label">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="shoe_info_format">%1$s (size %2$s) by %3$s - %4$s</string>
    <string name="shoe_store_title">Shoe Store</string>
    <string name="login_screen_title">Login to the Shoe Store</string>
    <string name="welcome_screen_title">Welcome</string>
    <string name="instructions_screen_title">Instructions</string>
</resources>
