<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="addShoeViewModel"
            type="com.udacity.shoestore.models.AddShoeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/new_shoe_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_weight="1"
                    android:text="@string/shoe_name_label"
                    android:textAlignment="textEnd" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/shoe_name_hint"
                    android:text="@={addShoeViewModel.shoeName}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/companyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_weight="1"
                    android:text="@string/shoe_company_label"
                    android:textAlignment="textEnd" />

                <EditText
                    android:id="@+id/companyEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/manufacturer_name_hint"
                    android:text="@={addShoeViewModel.company}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sizeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_weight="1"
                    android:text="@string/size_description"
                    android:textAlignment="textEnd" />

                <EditText
                    android:id="@+id/sizeEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/shoe_size_label"
                    android:inputType="numberDecimal"
                    android:text="@={addShoeViewModel.size}" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/descriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_weight="1"
                    android:text="@string/shoe_description_label"
                    android:textAlignment="textEnd" />

                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/shoe_description_hint"
                    android:text="@={addShoeViewModel.description}" />

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="1"
                android:onClick="@{() ->addShoeViewModel.onCancelCreate()}"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_weight="1"
                android:onClick="@{() ->addShoeViewModel.onSaveShoe()}"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</layout>