<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructionsHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_header"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/viewShoesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/view_shoes__instructions_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/addShoesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/add_shoe_instructions_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_shopping_button"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_gravity="center"/>
    </LinearLayout>
</layout>